--- a/changelog.html
+++ b/changelog.html
@@ -2,12 +2,17 @@
 <html lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Changelog Sunflower Persons Plugin</title>
+	<title>Changelog Sunflower Map Points Plugin</title>
 </head>
 
 <body>
 <h1>Changelogs</h1>
-<h2>Neu in 1.5.2 (2025-09-05)</h2>
+<h2>Neu in 1.5.3 (2025-09-10)</h2>
+<ul>
+<li>Make independant of sunflower theme - bootstrap based theme recommended (#18)</li>
+</ul>
+
+<h2>Neu in v1.5.2 (2025-09-05)</h2>
 <ul>
 <li>Add update code (#16)</li>
 </ul>
@@ -62,18 +67,6 @@
 <ul>
 <li>Fix height and rise version number 1.2.1</li>
 <li>Add height settings to block</li>
-</ul>
-
-<h2>Neu in v1.2.0 (2025-06-26)</h2>
-<ul>
-<li>Update sunflower-map-points.php</li>
-<li>Add new form fields email and phone</li>
-<li>Use Gutenberg block instead of shortcode</li>
-<li>Use Gutenberg block instead of shortcode</li>
-<li>Better version detection of plugin</li>
-<li>Move JavaScript to own file</li>
-<li>Rund phpcs to ensure coding styles</li>
-<li>Rise version number to 1.1.0</li>
 </ul>
 
 </body>
