--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,12 @@
 
 <body>
 <h1>Changelogs</h1>
-<h2>Neu in 1.5.3 (2025-09-10)</h2>
+<h2>Neu in 1.5.4 (2025-09-12)</h2>
+<ul>
+<li>Fix path to leaflet library (#20)</li>
+</ul>
+
+<h2>Neu in v1.5.3 (2025-09-10)</h2>
 <ul>
 <li>Make independant of sunflower theme - bootstrap based theme recommended (#18)</li>
 </ul>
@@ -35,11 +40,11 @@
 <h2>Neu in v1.4.1 (2025-07-23)</h2>
 <ul>
 <li>Avoid submitting the form multiple times (#12)</li>
+<li>Fix workflow for releases</li>
 </ul>
 
 <h2>Neu in v1.4.0 (2025-07-22)</h2>
 <ul>
-<li>Fix workflow for releases</li>
 <li>Rise version number to 1.4.0</li>
 <li>Add GitHub workflow for automatic CI (#11)</li>
 <li>Add counter block for map-points</li>
@@ -61,12 +66,6 @@
 <li>Code formatting and compile code block</li>
 <li>Fix typo in thank you notice</li>
 <li>Add: dropdown for topic, changed thank you notice</li>
-</ul>
-
-<h2>Neu in v1.2.1 (2025-07-02)</h2>
-<ul>
-<li>Fix height and rise version number 1.2.1</li>
-<li>Add height settings to block</li>
 </ul>
 
 </body>
