--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,12 @@
 
 <body>
 <h1>Changelogs</h1>
-<h2>Neu in 1.5.4 (2025-09-12)</h2>
+<h2>Neu in 1.5.5 (2025-09-16)</h2>
+<ul>
+<li>Make topics configurable by settings (#22)</li>
+</ul>
+
+<h2>Neu in v1.5.4 (2025-09-12)</h2>
 <ul>
 <li>Fix path to leaflet library (#20)</li>
 </ul>
@@ -57,15 +62,6 @@
 <li>rise version to 1.3.0</li>
 <li>Use modal for the feedback form</li>
 <li>Make mailto configurable in block settings</li>
-</ul>
-
-<h2>Neu in v1.2.2 (2025-07-04)</h2>
-<ul>
-<li>Update sunflower-map-points.php</li>
-<li>Make select field prettier with bootstrap classes</li>
-<li>Code formatting and compile code block</li>
-<li>Fix typo in thank you notice</li>
-<li>Add: dropdown for topic, changed thank you notice</li>
 </ul>
 
 </body>
