--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,12 @@
 
 <body>
 <h1>Changelogs</h1>
-<h2>Neu in 1.5.5 (2025-09-16)</h2>
+<h2>Neu in 1.6.0 (2025-09-23)</h2>
+<ul>
+<li>Add optional clustered marker in front- and/or backend (#24)</li>
+</ul>
+
+<h2>Neu in v1.5.5 (2025-09-16)</h2>
 <ul>
 <li>Make topics configurable by settings (#22)</li>
 </ul>
@@ -45,23 +50,16 @@
 <h2>Neu in v1.4.1 (2025-07-23)</h2>
 <ul>
 <li>Avoid submitting the form multiple times (#12)</li>
-<li>Fix workflow for releases</li>
 </ul>
 
 <h2>Neu in v1.4.0 (2025-07-22)</h2>
 <ul>
+<li>Fix workflow for releases</li>
 <li>Rise version number to 1.4.0</li>
 <li>Add GitHub workflow for automatic CI (#11)</li>
 <li>Add counter block for map-points</li>
 <li>Use proper localized labels in map block</li>
 <li>Enhance map in editor mode, select position and zoom level</li>
-</ul>
-
-<h2>Neu in v1.3.0 (2025-07-05)</h2>
-<ul>
-<li>rise version to 1.3.0</li>
-<li>Use modal for the feedback form</li>
-<li>Make mailto configurable in block settings</li>
 </ul>
 
 </body>
