--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,14 @@
 
 <body>
 <h1>Changelogs</h1>
-<h2>Neu in 1.6.0 (2025-09-23)</h2>
+<h2>Neu in 1.6.1 (2025-09-29)</h2>
+<ul>
+<li>Fix saving of default topics (#28)</li>
+<li>Hide custom posts from frontend (#27)</li>
+<li>Fix exception after adding map block to new pages (#26)</li>
+</ul>
+
+<h2>Neu in v1.6.0 (2025-09-23)</h2>
 <ul>
 <li>Add optional clustered marker in front- and/or backend (#24)</li>
 </ul>
@@ -50,16 +57,7 @@
 <h2>Neu in v1.4.1 (2025-07-23)</h2>
 <ul>
 <li>Avoid submitting the form multiple times (#12)</li>
-</ul>
-
-<h2>Neu in v1.4.0 (2025-07-22)</h2>
-<ul>
 <li>Fix workflow for releases</li>
-<li>Rise version number to 1.4.0</li>
-<li>Add GitHub workflow for automatic CI (#11)</li>
-<li>Add counter block for map-points</li>
-<li>Use proper localized labels in map block</li>
-<li>Enhance map in editor mode, select position and zoom level</li>
 </ul>
 
 </body>
