--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,12 @@
 
 <body>
 <h1>Changelogs</h1>
-<h2>Neu in 1.6.1 (2025-09-29)</h2>
+<h2>Neu in 1.6.2 (2025-11-13)</h2>
+<ul>
+<li>Add some field descriptions and translations (#35)</li>
+</ul>
+
+<h2>Neu in v1.6.1 (2025-09-29)</h2>
 <ul>
 <li>Fix saving of default topics (#28)</li>
 <li>Hide custom posts from frontend (#27)</li>
@@ -52,12 +57,6 @@
 <h2>Neu in v1.4.2 (2025-07-25)</h2>
 <ul>
 <li>Exclude custom post type from search and sitemap (#13)</li>
-</ul>
-
-<h2>Neu in v1.4.1 (2025-07-23)</h2>
-<ul>
-<li>Avoid submitting the form multiple times (#12)</li>
-<li>Fix workflow for releases</li>
 </ul>
 
 </body>
