--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,12 @@
 
 <body>
 <h1>Changelogs</h1>
-<h2>Neu in 1.6.2 (2025-11-13)</h2>
+<h2>Neu in 1.7.0 (2025-11-27)</h2>
+<ul>
+<li>Feature: add support to define areas with geojson files (#37)</li>
+</ul>
+
+<h2>Neu in v1.6.2 (2025-11-13)</h2>
 <ul>
 <li>Add some field descriptions and translations (#35)</li>
 </ul>
@@ -52,11 +57,6 @@
 <h2>Neu in v1.5.0 (2025-08-07)</h2>
 <ul>
 <li>Add function to export all POIs as csv. (#14)</li>
-</ul>
-
-<h2>Neu in v1.4.2 (2025-07-25)</h2>
-<ul>
-<li>Exclude custom post type from search and sitemap (#13)</li>
 </ul>
 
 </body>
